# kutacc

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  README_en.md  build.sh
benchmark/moe/: CMakeLists.txt  build.sh  run.sh
benchmark/moe/csrc/: main.cpp
benchmark/moe/csrc/moe/: low_latency.cpp  low_latency.h
benchmark/moe/csrc/utils/: check.h  memory_pool.cpp  scalar_type.h
benchmark/moe/script/: generate.sh
cmake/: libkutacc_source_files.cmake
include/: kutacc.h
src/: CMakeLists.txt
src/activation/: relu.h  sigmoid.h  silu.h
src/attention/flash_mla/: common.h  flash_fwd_mla_bf16.cpp  flash_fwd_mla_metadata.cpp
src/attention/flash_mla/flash_fwd_mla_kernel/: kernel_traits.h  mla_kernel.h  splitkv_mla.h
src/attention/flash_mla/flash_fwd_mla_kernel/kernels/: kernel_common.h  mla_bf16_32x64.h  mla_store_bf16.h
src/comm/: allgather.cpp  allreduce.cpp
src/core/: softmax.h
src/core/kurmcl/: kurmcl_impl.cpp  kurmcl_impl.h
src/core/matmul/: batched_gemm_kernel.cpp  bgemm_kernel.cpp  gemm_ncopy_matrix.S  gemm_tiling.h  igemm_kernel.cpp  kernel.h  kernel_common.h  linear.cpp  linear.h
src/embedding/: embedding.cpp  embedding.h
src/math/: fast_exp.h
src/moe/: combine.cpp  dispatch.cpp  internal.h
src/rmsnorm/: def.h  rmsnorm.cpp  rmsnorm_quant.cpp
src/tensor/: tensor.cpp  tensor.h
src/utils/: check.cpp  check.h  collapse.h  kpmalloc.cpp  kpmalloc.h  memory.h  parallel.cpp  persistent_buffer.h  quant.cpp  quant.h
src/version/: version.cpp
src/wrapper/: scalar_of.h  svcnt.h  svcvt.h  svdup.h  svld1.h  svldnt1.h  svst1.h  svwhilelt.h  vector_of.h  wrapper-incl.h  wrapper.h
test/: CMakeLists.txt  build.sh  install-numa-duplication.sh  run_test.sh
test/allgather/: CMakeLists.txt
test/allgather/csrc/: main.cpp
test/allgather/script/: allgather_test.sh  test.sh
test/allreduce/: CMakeLists.txt
test/allreduce/csrc/: main.cpp  sdma_threshold.h
test/allreduce/script/: allreduce_test.sh  test.sh
test/embedding/: CMakeLists.txt  test_embedding.cpp
test/flash_mla/: CMakeLists.txt
test/flash_mla/csrc/: Tensor.h  main.cpp  mla.cpp  mla.h  utils.h
test/flash_mla/script/: test.sh
test/matmul/: CMakeLists.txt  test_batched_gemm_pack.cpp  test_batched_gemm_woqs8.cpp  test_bgemm.cpp  test_bgemm_pack.cpp  test_igemm_bdq.cpp  test_igemm_pack.cpp
test/moe/: CMakeLists.txt
test/moe/csrc/: main.cpp
test/moe/csrc/utils/: memory_pool.h  parma.h  span.h  tensor.h
test/moe/script/: generate.sh  run.sh
test/rmsnorm/: CMakeLists.txt  test_rmsnorm.cpp  test_rmsnorm_quant.cpp
test/tool/: helper.h
test/utils/: CMakeLists.txt  test_quant.cpp
